# project2_Ter-Poghosyan_Yurii_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/primitive_db/: constrants.py  core.py  decorators.py  engine.py  main.py  utils.py
