[tool.poetry]
name = "project2-ter-poghosyan-yurii-m25-555"
version = "0.1.0"
description = "Simple DataBase"
authors = ["Yurii Ter-Poghosyan <riskyjoshua@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main" 

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 